# qubit-os-core

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
calibration/defaults/: qutip_simulator.yaml
docs/: ROADMAP.md
docs/api/: openapi.yaml
docs/specs/: QubitOS-Design-v0.5.0.md
src/qubitos/: __init__.py
src/qubitos/calibrator/: __init__.py  fingerprint.py  loader.py
src/qubitos/cli/: __init__.py  main.py
src/qubitos/client/: __init__.py  hal.py
src/qubitos/pulsegen/: __init__.py  grape.py  hamiltonians.py  shapes.py
src/qubitos/validation/: __init__.py
tests/unit/: test_validation.py
